# litellm-ultis

./: .env  README.md  build.sh
cli/: package.json
cli-dist/: install.sh  setup-telemetry.sh  uninstall.sh
cli/src/: auth.ts  claude-check.ts  claude-settings.ts  gateway.ts  index.ts  shell.ts  uninstall.ts
cli/tests/: auth.test.ts  claude-check.test.ts  gateway.test.ts  shell.test.ts
cloudrun/: .env.example  Dockerfile  main.py  pyproject.toml
cloudrun/app/: auth.py  config.py  db.py  litellm_client.py  main.py
cloudrun/tests/: perf_test.py  test_auth.py  test_litellm_client.py  test_main.py
